src- Version 4.19/objects/Taxation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The taxation data specifying the different tax percentages for US cities.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTax_CityComponent__c</fullName>
        <label>SalesTax-CityComponent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SalesTax_CountyComponent__c</fullName>
        <label>SalesTax-CountyComponent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SalesTax_StateComponent__c</fullName>
        <label>SalesTax-StateComponent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SalesTax_TotalTax__c</fullName>
        <label>SalesTax-TotalTax</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseTax_CityComponent__c</fullName>
        <label>UseTax-CityComponent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UseTax_CountyComponent__c</fullName>
        <label>UseTax-CountyComponent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UseTax_StateComponent__c</fullName>
        <label>UseTax-StateComponent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UseTax_TotalTax__c</fullName>
        <label>UseTax-TotalTax</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ZIPCode__c</fullName>
        <externalId>true</externalId>
        <label>ZIPCode</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Obsolete__Invoice IT US Tax Rates</label>
</CustomObject>